[workspace]
resolver = "2"
members = ["contracts", "contracts/hyperlane-bridge", "server"]

[workspace.dependencies]
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "main" }
hyli-smt-token = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-smt-token", branch = "main" }
smt-token = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-smt-token", branch = "main" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "main" }
hyli-net = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-net", branch = "main" }
hyli-model = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-model", branch = "main" }

contracts = { path = "contracts", default-features = false, package = "contracts" }
hyperlane-bridge = { path = "contracts/hyperlane-bridge", default-features = false, package = "hyli-hyperlane-bridge" }

alloy-tx-macros = { version = "=1.6.3", default-features = false }
alloy-consensus = { version = "1.1.0", default-features = false }
alloy-eips = { version = "=1.6.3", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
alloy-genesis = { version = "1.6", default-features = false }
alloy-trie = { version = "0.9", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rpc-types-debug = { version = "1.6", default-features = false }

reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8", features = [
    "witness",
] }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "a92aca2549a751d0fdb0fbda1d9521e4591397c8" }
revm = { version = "34.0.0", default-features = false, features = ["std"] }
bincode = "1.3"

k256 = { version = "0.13", default-features = false }
tokio-util = { version = "0.7", default-features = false }
anyhow = "1.0.102"
axum = "0.8.3"
borsh = "1.6.0"
clap = "4.5.28"
config = { version = "0.15.11", default-features = false }
hex = "0.4.3"
hmac = "0.12.1"
opentelemetry = "0.28"
opentelemetry-prometheus = "0.28.0"
opentelemetry_sdk = "0.28.0"
prometheus = "0.13.4"
rand = "0.9.0"
reqwest = "0.12.9"
risc0-build = "=3.0"
risc0-zkvm = { version = "=3.0", default-features = false }
secp256k1 = "0.30.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "2.0"
tokio = "1.44.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"

[workspace.package]
version = "0.4.1"
edition = "2021"
