[package]
name = "contracts"
edition = { workspace = true }
rust-version = "1.85"

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }
hyperlane-bridge = { workspace = true, features = ["client"] }

[build-dependencies]
risc0-build = { workspace = true, optional = true }

[package.metadata.risc0]
methods = ["hyperlane-bridge"]

[features]
build = ["dep:risc0-build"]
nonreproducible = ["build", "all"]

# Following features are used to choose which contracts should be rebuild with docker
all = ["hyperlane-bridge"]
hyperlane-bridge = []
