[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
hyli-modules = { workspace = true, features = ["db", "risc0"] }
hyli-model = { workspace = true }
hyperlane-bridge = { workspace = true, features = ["client"] }
smt-token = { workspace = true }

alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

config = { workspace = true, default-features = false, features = ["toml"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
indexmap = "2"
k256 = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
opentelemetry = { workspace = true }
prometheus = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
