[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
hyli-modules = { workspace = true, features = ["db", "risc0"] }
hyli-model = { workspace = true }
hyperlane-bridge = { workspace = true, features = ["client"] }

alloy-consensus = { workspace = true }
alloy-evm = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-genesis = { workspace = true }
alloy-trie = { workspace = true }
alloy-rlp = { workspace = true }

reth-stateless = { workspace = true }
reth-revm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-chainspec = { workspace = true }
reth-trie-common = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
revm = { workspace = true }
bincode = { workspace = true }

config = { workspace = true, default-features = false, features = ["toml"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
indexmap = "2"
k256 = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tower-http = { workspace = true, features = ["cors"] }

[dev-dependencies]
hyli-turmoil-shims = { workspace = true }
alloy-network = { version = "1.6.3" }
alloy-signer = { version = "1.6.3", default-features = false }
alloy-signer-local = { version = "1.6.3", default-features = false }
