[package]
name = "hyli-hyperlane-bridge"
description = "Hyli Smart Contract - Hyperlane Bridge"
version = { workspace = true }
edition = { workspace = true }
rust-version = "1.85"

[[bin]]
name = "hyperlane-bridge"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[[bin]]
name = "bridge-server"
path = "src/bin/server.rs"
required-features = ["server"]
test = false

[dependencies]
sdk = { workspace = true }
smt-token = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }

risc0-zkvm = { workspace = true, optional = true, features = ['std'] }
client-sdk = { workspace = true, optional = true }
hyli-modules = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
hyli-net = { workspace = true, optional = true }
hyli-model = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
axum = { workspace = true, features = ["macros"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
config = { workspace = true, features = ["toml"], optional = true }
k256 = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
hex = { workspace = true, optional = true }

[dev-dependencies]
alloy-signer = { version = "1.1.0", default-features = false }
alloy-signer-local = { version = "1.1.0", default-features = false }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-eips = { workspace = true, features = ["std"] }

[features]
default = []
client = [
  "dep:client-sdk",
  "client-sdk/risc0",
  "smt-token/client",
  "sdk/full-model",
]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
server = [
  "client",
  "dep:axum",
  "dep:tokio",
  "dep:clap",
  "dep:k256",
  "dep:serde",
  "dep:serde_json",
  "dep:tracing",
  "dep:reqwest",
  "dep:hex",
  "dep:config",
  "dep:hyli-modules",
  "dep:opentelemetry",
  "dep:hyli-net",
  "dep:hyli-model",
  "dep:tokio-util",
]
