[package]
name = "hyli-hyperlane-bridge"
description = "Hyli Smart Contract - Hyperlane Bridge"
version = { workspace = true }
edition = { workspace = true }
rust-version = "1.85"

[[bin]]
name = "hyperlane-bridge"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[dependencies]
sdk = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-sol-types = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }

risc0-zkvm = { workspace = true, optional = true, features = ['std'] }
client-sdk = { workspace = true, optional = true }

[dev-dependencies]
alloy-signer = { version = "1.1.0", default-features = false }
alloy-signer-local = { version = "1.1.0", default-features = false }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-eips = { workspace = true, features = ["std"] }

[features]
default = []
client = ["dep:client-sdk", "client-sdk/risc0", "sdk/full-model"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
